--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
                 <img src="me.jpg" id="self-portrait" class="picture"> 
                 <div class="about">
                     <h1> About </h1>
-                    <p> I am a undergraduate at the University Of Hawaii - Manoa studying Computer Science. On my free time I enjoy
+                    <p> I am an undergraduate at the University Of Hawaii - Manoa studying Computer Science. On my free time I enjoy
                         strength-training, hiking, going to the beach, and playing games. I love listening to rap music, my favorite 
                         food is sushi, and I think that Ariana Grande is beautiful.</p>
                 </div>
