--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body> 
         <div class="container">
             <div class="top"> 
-                <img src="me.jpg" id="self-portrait" class="picture"> 
+                <img src="./html/me.jpg" id="self-portrait" class="picture"> 
                 <div class="about">
                     <h1> About </h1>
                     <p> I am an undergraduate at the University Of Hawaii - Manoa studying Computer Science. On my free time I enjoy
