--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="icon">
                     <ul>
                         <li><a href="https://www.instagram.com/dafuq.gav/"><i class="fa fa-instagram"></i></a></li> 
-                        <li><a href="https://github.com/devgav"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://github.com/devgav?tab=repositories"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/gavin-peng-2b9046190/"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="mailto: gavpeng7447@gmail.com"><i class="fa fa-inbox"></i></a></li>
                     </ul>
